# volunteers_are_nearby

./: .gitlab-ci.yml  Dockerfile  README.md  ci-notify.sh  docker-compose.yml  pyproject.toml  requirements.txt  text.txt
.github/workflows/: main.yml
docs/: create_all_docs.py
docs/source/: conf.py  index.rst
documentating_service/: create_all_docs.py
documentating_service/source/: conf.py
flaskr/: __init__.py  app.py  config.py  core.py  database.py
flaskr/data/: __all_models.py  db_session.py  event_types.py  events.py  roles.py  users.py
flaskr/db/: volunteerium.db
flaskr/form/: account_editform.py  account_password_form.py  custom_validators.py  loginform.py  registerform.py  suggested_event_form.py
flaskr/routes/: account_checker.py  admin_panel.py  events.py  joined_users.py  manage.py  suggest_event.py  users.py
flaskr/services/: event_types.py  events.py  joined_users.py  manage_event.py  roles.py  suggested_events.py  users.py
flaskr/templates/: account_base.html  account_edit.html  account_info.html  account_password.html  base.html  event_edit.html  event_page.html  index.html  init.html  login.html  manage.html  manage_event.html  register.html  suggest_event.html
images/: infrastracture.drawio
mailer_service/: Dockerfile  controllers.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  smtp_client.py  views.py
pgadmin_service/: Dockerfile.pgadmin  db_adder.py  input_db.json.template  setup_pgadmin.sh  start.sh
tests/: test_default1.py  test_default2.py
web-app_service/: Dockerfile.web-app  app.py  config.py  core.py  database.py  requirements.txt
(+39 files in other folders)
