[tool.poetry]
name = "volunteers-are-nearby"
version = "0.1.0"
description = ""
authors = ["DmitriyKryuchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
sqlalchemy = "^2.0.29"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
Sphinx = "^7.2.6"
selenium = "^4.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
