[tool.poetry]
name = "volunteers-are-nearby"
version = "0.1.0"
description = ""
authors = ["DmitriyKryuchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
sqlalchemy = "^2.0.29"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
ruff = "^0.4.2"
redis = "^5.0.4"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
requests = "^2.32.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
Sphinx = "^7.2.6"
selenium = "^4.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [ "E", "F", "W" ]
ignore = ["F401", "E501", "W292"]