[tool.poetry]
name = "mailer-service"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
